@@ -30,8 +30,8 @@ module Kernel
   # version).
   #
   # You can define the environment variable GEM_SKIP as a way to not
-  # load specified gems.  you might do this to test out changes that
-  # haven't been intsalled yet.  Example:
+  # load specified gems.  You might do this to test out changes that
+  # haven't been installed yet.  Example:
   #
   #   GEM_SKIP=libA:libB ruby-I../libA -I../libB ./mycode.rb
   #
@@ -48,17 +48,6 @@ module Kernel
   #
   def gem(gem_name, *version_requirements)
     active_gem_with_options(gem_name, version_requirements)
-  end
-
-  # Same as the +gem+ command, but will also require a file if the gem
-  # provides an auto-required file name.
-  #
-  # DEPRECATED!  Use +gem+ instead.
-  #
-  def require_gem(gem_name, *version_requirements)
-    file, lineno = location_of_caller
-    warn "#{file}:#{lineno}:Warning: require_gem is obsolete.  Use gem instead."
-    active_gem_with_options(gem_name, version_requirements, :auto_require=>true)
   end
 
   # Return the file name (string) and line number (integer) of the caller of
